# otel-instrumentation-influxdbclient

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/otel_instrumentation_influxdbclient/: __init__.py  package.py
tests/: test_influxdb.py
